Allow navbar overflow issue

--- a/less/moodle/custom.less
+++ b/less/moodle/custom.less
@@ -266,3 +266,7 @@ div.yui3-overlay-content.yui3-widget-stdmod {
 .template_heading {
     margin-top: 10px;
 }
+
+.navbar {
+    overflow: visible;
+}
